Fix bug 414851: let white-space:nowrap inherit into buttons.  r+sr=bz, a=schrep
UltraBlame original commit: 45cb40e99bc563eba3278814a79a027c0b28f5f2

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -480,7 +480,7 @@ input[type="submit"] {
 
 button {
   
-  white-space: normal;  
+  white-space: inherit;
   text-indent: 0;
 }
 
